--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bot Hub</title>
     <link rel="icon" href="/logo.png">
-    <link rel="stylesheet" href="/styles/style.css">
+    <link rel="stylesheet" href="/styles/style.css" type="text/css">
 </head>
 <body>
     <form action="/generate" method="POST" class="buttons">
