--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bot Hub</title>
-    <link rel="icon" href="/logo.png">
-    <link rel="stylesheet" href="/styles/style.css" type="text/css">
+    <link rel="icon" type="image/png" href="/logo.png">
+    <link rel="stylesheet" href="/styles/style.css">
 </head>
 <body>
     <form action="/generate" method="POST" class="buttons">
